tests/libflow_typed/libflow_typed.exp
Error -------------------------------------------------------------------------------------------------- libtest.js:2:25

Cannot assign `"Stegosaurus"` to `dino` because string [1] is incompatible with literal union [2]. [incompatible-type]

   libtest.js:2:25
   2| const dino : Dinosaur = "Stegosaurus"
                              ^^^^^^^^^^^^^ [1]

References:
   libtest.js:2:14
   2| const dino : Dinosaur = "Stegosaurus"
                   ^^^^^^^^ [2]



Found 1 error
